# data-pipeline-service

./: .pre-commit-config.yaml  README.md  env.py  index_router.py  main.py  pyproject.toml
.github/workflows/: alembic-database-migration.yml  deploy-fastapi-vercel-cloudflare.yml
app/documents/: router.py  service.py
app/workflows/: router.py  service.py
database/: config.py  models.py
lifespan/: lifespan.py  shutdown.py  startup.py
migrations/: env.py
migrations/versions/: 91e229bdb719_create_request_logs.py
utils/: log_function.py
